# leafaffliction

./: .gitignore  README.md  pyproject.toml  signature.txt
public/: index.html
src/: Augment.py  Augment.yaml  Classify.py  ClassifyTest.py  Distribution.py  Distribution.yaml  Predict.py  Predict.yaml  Train.py  Train.yaml  Transform.py  Transform.yaml  split.py  split.yaml  test.py
src/classes/: classifier.py  someclass.py  transformer.py
