[project]
name = "leafaffliction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.0.0",
    "opencv-python>=4.12.0.88",
    "plantcv>=4.9",
    "plotly>=6.3.0",
    "pyyaml>=6.0.2",
    "tensorflow>=2.20.0",
]
